--- a/blogspot.html
+++ b/blogspot.html
@@ -10,4 +10,7 @@
     <h1> Aqui vamos a hacer un blogspot</h1>
     <p> Este es el parrafo 1</p>
 </body>
+<footer>
+    <p>Andres Guilarte @2024</p>
+</footer>
 </html>
