--- a/blogspot.html
+++ b/blogspot.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1> Aqui vamos a hacer un blogspot</h1>
-    <p> Este es el parrafo 1</p>
+    <div id="container">
+      <div id="post">
+        <h1> Este es el titulo del blog super cool</h1>
+        <p> Este es el parrafo donde vamos a explicar 
+            lo genial de las ramas de git 
+        </p>
+      </div>
+    </div>
 </body>
 <footer>
     <p>Andres Guilarte @2024</p>
