--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+      <div id="cabecera">
+        Cabecera
+      </div>
       <div id="post">
         <h1> Este es el titulo del blog super cool</h1>
         <p> Este es el parrafo donde vamos a explicar 
