--- a/blogspot.html
+++ b/blogspot.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
       <div id="cabecera">
-        Cabecera
+        Blog de Andrés
+        <span id="tagline">Mi blog personal</span>
       </div>
       <div id="post">
         <h1> Este es el titulo del blog super cool</h1>
