--- a/blogspot.html
+++ b/blogspot.html
@@ -13,6 +13,10 @@
         <p> Este es el parrafo donde vamos a explicar 
             lo genial de las ramas de git 
         </p>
+        <p>
+          Los blogs son la mejor forma de compartir informacion
+          y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
+        </p>
       </div>
     </div>
 </body>
