--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="cabecera">
         Blog de Andrés
-        <span id="tagline">Mi blog personal</span>
+        <span id="tagline">Mi blog de cabecera</span>
       </div>
       <div id="post">
         <h1> Este es el titulo del blog super cool</h1>
