Cambio de color en cabecera y recordatorio añadido

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="cabecera">
         Blog de Andrés
-        <span id="tagline">Mi blog personal</span>
+        <span id="tagline">Mi blog maestro</span>
       </div>
       <div id="post">
         <h1> Este es el titulo del blog super cool</h1>
@@ -20,6 +20,9 @@
         <p>
           Los blogs son la mejor forma de compartir informacion
           y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
+        </p>
+        <p>
+          Que bueno que pague platzi
         </p>
       </div>
     </div>
