--- a/blogspot.html
+++ b/blogspot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a Hyperblog 2.0</title>
+    <title>Bienvenido a Hyperblog 3.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
           y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
         </p>
         <p>
-          Que bueno que pague platzi
+          Que bueno que pague platzi de verdad
         </p>
       </div>
     </div>
