--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
       <div id="cabecera">
+        <img id="logo" src="imagenes/dragon.png">
         Blog de Andrés
         <span id="tagline">Mi blog maestro</span>
       </div>
