--- a/blogspot.html
+++ b/blogspot.html
@@ -13,7 +13,7 @@
         <span id="tagline">Mi blog maestro</span>
       </div>
       <div id="post">
-        <h1> Este es el titulo del blog super cool</h1>
+        <h1> Este es el título del blog super cool</h1>
         <p> Este es el parrafo donde vamos a explicar 
             lo genial de las ramas de git 
         </p>
@@ -25,9 +25,9 @@
           Que bueno que pague platzi
         </p>
       </div>
+      <div id="footer">
+           Hecho con amor por mí
+      </div>
     </div>
 </body>
-<footer>
-    <p>Andres Guilarte @2024</p>
-</footer>
 </html>
