--- a/blogspot.html
+++ b/blogspot.html
@@ -15,7 +15,7 @@
       </div>
       <div id="post">
         <h1> Este es el título del blog super cool</h1>
-        <p> Este es el parrafo donde vamos a explicar 
+        <p> Este es el párrafo donde vamos a explicar 
             lo genial de las ramas de git 
         </p>
         <p>
