--- a/blogspot.html
+++ b/blogspot.html
@@ -14,7 +14,7 @@
         <span id="tagline">Mi blog maestro</span>
       </div>
       <div id="post">
-        <h1> Este es el título del blog super cool</h1>
+        <h1> Este es el título del blog super cool del futuro</h1>
         <p> Este es el párrafo donde vamos a explicar 
             lo genial de las ramas de git 
         </p>
