--- a/blogspot.html
+++ b/blogspot.html
@@ -18,6 +18,7 @@
         <p> Este es el párrafo donde vamos a explicar 
             lo genial de las ramas de git 
         </p>
+        <p> <img src="imagenes/imagenGohan.jpg" width="100%"></p>
         <p>
           Los blogs son la mejor forma de compartir informacion
           y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
