Cambio en titulo y color del footer :)

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
       <div id="cabecera">
         <img id="logo" src="imagenes/dragon.png">
         Blog de Andrés
-        <span id="tagline">Mi blog maestro</span>
+        <span id="tagline">Mi blog maestro version 1</span>
       </div>
       <div id="post">
         <h1> Este es el título del blog super cool del futuro</h1>
